# flutter_gstreamer_player

./: README.md  pubspec.yaml
elinux/: CMakeLists.txt  flutter_gstreamer_player_plugin.cc
elinux/include/flutter_gstreamer_player/: flutter_gstreamer_player_plugin.h
